--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(grace)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+add_compile_definitions(FMT_HEADER_ONLY)
+
 add_executable(grace src/main.cpp src/compiler.cpp src/scanner.cpp src/vm.cpp)
-target_link_libraries(grace fmt)
