lists, several bugs need fixing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,12 @@ if (CMAKE_BUILD_TYPE MATCHES Debug)
 endif(CMAKE_BUILD_TYPE MATCHES Debug)
 
 add_compile_definitions(FMT_HEADER_ONLY)
-add_executable(grace src/main.cpp src/compiler.cpp src/scanner.cpp src/vm.cpp src/value.cpp)
+add_executable(grace 
+  src/main.cpp 
+  src/compiler.cpp 
+  src/scanner.cpp 
+  src/vm.cpp 
+  src/value.cpp 
+  src/objects/grace_list.cpp 
+  src/objects/object_tracker.cpp)
 target_include_directories(grace PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/fmt/include)
