--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(grace)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-if (CMAKE_BUILD_TYPE MATCHES Debug)
+if (NOT CMAKE_BUILD_TYPE MATCHES Release)
   add_compile_definitions(GRACE_DEBUG)
-endif(CMAKE_BUILD_TYPE MATCHES Debug)
+endif(NOT CMAKE_BUILD_TYPE MATCHES Release)
 
 add_compile_definitions(FMT_HEADER_ONLY)
 add_executable(grace 
@@ -14,6 +14,8 @@ add_executable(grace
   src/compiler.cpp 
   src/scanner.cpp 
   src/vm.cpp 
+  src/vm_handlers.cpp 
+  src/vm_register_natives.cpp 
   src/value.cpp 
   src/objects/grace_list.cpp 
   src/objects/object_tracker.cpp)
