fixed building release on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(grace)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 if(MSVC)
-  message("HELLO")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
 else(MSVC)
   set(CMAKE_CXX_STANDARD 17)
@@ -19,7 +18,8 @@ add_executable(grace
   src/vm_register_natives.cpp 
   src/value.cpp 
   src/objects/grace_list.cpp 
-  src/objects/object_tracker.cpp)
+  src/objects/object_tracker.cpp
+)
 
 target_include_directories(grace PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/fmt/include)
 
@@ -28,6 +28,7 @@ if (NOT CMAKE_BUILD_TYPE MATCHES Release)
 endif(NOT CMAKE_BUILD_TYPE MATCHES Release)
 
 add_compile_definitions(FMT_HEADER_ONLY)
+
 if(MSVC)
   target_compile_options(grace PRIVATE /W4 /WX)
 else()
