--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required(VERSION 3.8)
 project(grace)
 
 add_executable(grace 
-  src/main.cpp 
-  src/compiler.cpp 
-  src/scanner.cpp 
-  src/value.cpp 
-  src/vm.cpp 
-  src/vm_register_natives.cpp 
+  src/main.cpp
+  src/compiler.cpp
+  src/scanner.cpp
+  src/value.cpp
+  src/vm.cpp
+  src/vm_register_natives.cpp
   src/objects/grace_exception.cpp
-  src/objects/grace_list.cpp 
+  src/objects/grace_iterator.cpp
+  src/objects/grace_list.cpp
   src/objects/object_tracker.cpp
 )
 
