--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ add_executable(grace
   src/vm.cpp
   src/vm_register_natives.cpp
   src/objects/grace_exception.cpp
-  src/objects/grace_iterator.cpp
   src/objects/grace_list.cpp
+  # src/objects/grace_string.cpp
   src/objects/object_tracker.cpp
 )
 
