--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,18 @@ add_executable(grace
 )
 
 target_include_directories(grace PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/fmt/include)
-
-set_property(TARGET grace PROPERTY EXPORT_COMPILE_COMMANDS ON)
-set_property(TARGET grace PROPERTY CXX_STANDARD 20)
-set_property(TARGET grace PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE})
+target_compile_definitions(grace PRIVATE FMT_HEADER_ONLY)
+set_target_properties(grace PROPERTIES
+  EXPORT_COMPILE_COMMANDS ON
+  CXX_STANDARD 20
+  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}
+)
 
 if (NOT CMAKE_BUILD_TYPE MATCHES Release)
   add_compile_definitions(GRACE_DEBUG)
-endif(NOT CMAKE_BUILD_TYPE MATCHES Release)
+  target_compile_definitions(grace PRIVATE GRACE_DEBUG)
+endif()
 
-target_compile_definitions(grace PRIVATE FMT_HEADER_ONLY)
 
 if(MSVC)
   target_compile_options(grace PRIVATE /W4 /WX)
