--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(grace
   src/vm_register_natives.cpp
   src/objects/grace_dictionary.cpp
   src/objects/grace_exception.cpp
+  src/objects/grace_iterator.cpp
   src/objects/grace_keyvaluepair.cpp
   src/objects/grace_list.cpp
   src/objects/object_tracker.cpp
