--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,8 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: true
-
+      env:
+        CXX: g++-11
     - name: build
       run: |        
         mkdir build
@@ -39,7 +40,7 @@ jobs:
     
   build-macos:
     
-    runs-on: windows-latest
+    runs-on: macos-latest
     
     steps:
     - uses: actions/checkout@v3
