--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,7 +17,7 @@ jobs:
         submodules: true
     - name: build
       run: |
-        sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++11
+        sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++11 40
         mkdir build
         cmake -DCMAKE_BUILD_TYPE=Release -S . -B build
         cmake --build build --config Release -- -j
