--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,9 +15,13 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: build
+    - name: get-g++11
       run: |
+        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        sudo apt install -y g++-11
         sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/g++-11 40
+    - name: build
+      run: |        
         mkdir build
         cmake -DCMAKE_BUILD_TYPE=Release -S . -B build
         cmake --build build --config Release -- -j
