disabled warnings in external code msvc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ endif()
 
 if(MSVC)
   target_compile_definitions(grace PRIVATE GRACE_MSC)
-  target_compile_options(grace PRIVATE /W4 /WX)
+  target_compile_options(grace PRIVATE /W4 /WX /external:W0)
 else()
   target_compile_options(grace PRIVATE -Wall -Wextra -Wpedantic -Werror)
   target_link_libraries(grace pthread)
