--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/fmt"]
 	path = deps/fmt
 	url = https://github.com/ryanjeffares/fmt.git
+[submodule "deps/dyncall"]
+	path = deps/dyncall
+	url = https://github.com/ryanjeffares/dyncall.git
