linking to dyncall on mac m1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,20 +43,23 @@ if(MSVC)
   target_compile_definitions(grace PRIVATE GRACE_MSC)
   target_compile_options(grace PRIVATE /W4 /WX /external:W0 /external:templates-)
   target_link_libraries(grace
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/win_x64/dyncall_s.lib    
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/win_x64/dynload_s.lib
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/win_x64/dyncallback_s.lib
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/Win-x64/dyncall_s.lib    
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/Win-x64/dynload_s.lib
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/Win-x64/dyncallback_s.lib
   )
-else()
+else()  
+
   target_compile_options(grace PRIVATE -Wall -Wextra -Wpedantic -Werror)
   
-  if(NOT APPLE)
-    target_link_libraries(grace 
-      PRIVATE pthread
-      PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/linux_x64/libdyncall_s.a
-      PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/linux_x64/libdyncallback_s.a
-      PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/linux_x64/libdynload_s.a
-      PRIVATE ${CMAKE_DL_LIBS} 
-    )
-  endif()
+  # horrible hack
+  EXECUTE_PROCESS(COMMAND uname COMMAND tr -d '\n' OUTPUT_VARIABLE OS_NAME)
+  EXECUTE_PROCESS(COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE)
+
+  target_link_libraries(grace 
+    PRIVATE pthread
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/${OS_NAME}-${ARCHITECTURE}/libdyncall_s.a
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/${OS_NAME}-${ARCHITECTURE}/libdyncallback_s.a
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/${OS_NAME}-${ARCHITECTURE}/libdynload_s.a
+    PRIVATE ${CMAKE_DL_LIBS} 
+  )  
 endif()
