cmake fixed windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(grace)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(deps/dyncall dyncall_build)
-add_subdirectory(src)
+add_subdirectory(src grace)
